# Tambah-Pakan

./: meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: application.vala  dataPakan.txt  main.vala  meson.build  pakanModel.vala  styles.css  testData.txt  window.ui  window.vala
